manager service added